# mpn

./: CMakeLists.txt  README.md  TODO  amatrix.c  amatrix.h  auxx.c  auxx.h  cache.c  cache.h  config.c  config.h  jit.c  jit.h  limits.h  loaderis.c  loaderis.h  main.c  mc.c  mc.cpp  mc.h  mpn.c  mpn.h  mpn.sbatch  multiplicity.c  multiplicity.h  permutations.c  permutations.h  plist.h  pmatrix.c  pmatrix.h  reader.c  reader.h  regularization.c  regularization.h  rfactors.c  rfactors.h  runall.sh  sampling.cpp  sampling.h  test.ini  (+6 more)
psi4/: calc_SOERI_BH.py  calc_SOERI_CH2.py  calc_SOERI_H2.py  calc_SOERI_H2O.py  calc_SOERI_HF.py  calc_SOERI_NH.py  calc_SOERIs.sh  calc_energies.sh  calc_energies_BH.py  calc_energies_CH2.py  calc_energies_H2.py  calc_energies_H2O.py  calc_energies_HF.py  calc_energies_NH.py  gen_inis.sh  mp2energy.py  template.ini
slurm/: mpn.sbatch  run10_BH_321G_34.ini  run10_BH_631G_34.ini  run10_BH_631Gstar_34.ini  run10_BH_631Gstarstar_34.ini  run10_BH_STO3G_34.ini  run10_CH2_321G_34.ini  run10_CH2_631G_34.ini  run10_CH2_631Gstar_34.ini  run10_CH2_631Gstarstar_34.ini  run10_CH2_STO3G_34.ini  run10_H2O_321G_34.ini  run10_H2O_631G_34.ini  run10_H2O_631Gstar_34.ini  run10_H2O_631Gstarstar_34.ini  run10_H2O_STO3G_34.ini  run10_HF_321G_34.ini  run10_HF_631G_34.ini  run10_HF_631Gstar_34.ini  run10_HF_631Gstarstar_34.ini  run10_HF_STO3G_34.ini  run10_NH_321G_34.ini  run10_NH_631G_34.ini  run10_NH_631Gstar_34.ini  run10_NH_631Gstarstar_34.ini  run10_NH_STO3G_34.ini
